fix: edit cards layout to work on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -413,3 +413,9 @@ footer {
 .cards-container .card-title {
   letter-spacing: 2px;
 }
+
+.cards .col {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
